@@ -7,3 +7,6 @@ copyright_year = 2017
 [@MSCHOUT]
 use_travis = 1
 use_twitter = 1
+
+[RemovePrereqs]
+remove = Test::Signature
